# genBlog

./: gen-nefiltrets.cabal  nefiltrets.hs
