name:                gen-nefiltrets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://nefiltrets.lv
license:             BSD3
author:              Ingars Jekabsons
maintainer:          dzingars@gmail.com
copyright:           2018 Ingars Jekabsons
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             nefiltrets.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
